bsrs-ember/app/styles/base/resets.scss
.selectize-input{
	border: $borderStyle;
	border-radius: $borderRadius;
}
.selectize-input.focus {
    border-color: $activeColor;
    outline: 0;
    -webkit-box-shadow: none;
    box-shadow: none;
	border-radius: $borderRadiusTop;
}
.selectize-dropdown, .selectize-dropdown.form-control{
	margin: -1px 0 0;
	border-color: $activeColor;
	border-radius: $borderRadiusBottom;
}
input, textarea, select, button {
	outline: none;
	-webkit-box-shadow: none !important;
	-moz-box-shadow: none !important;
	-ms-box-shadow: none !important;
	box-shadow: none !important;
}
input[type="text"]:disabled {
	border: none;
	box-shadow: none;
	&:hover {
		border: none;
		box-shadow: none;
	}
}//input

.form-control,
.ember-power-select .ember-power-select-trigger{
	border-radius: $borderRadius;
	border-color: $gray;
	color: $dark;
	&:hover{
		// border-color: $hoverColor;
	}
	&:focus{
		outline: none !important;
		border-color: $activeColor;
		z-index: 3;
	}
}
.ember-power-select{

	.ember-power-select-trigger{
		min-height: 34px;
		background-image: none;
		line-height: 34px;
		padding: 0 36px 0 12px !important;
		text-overflow: ellipsis;
    	overflow: hidden;

		.ember-power-select-status-icon {
			right: 10px;
		    border-width: 5px 4px 0 4px;
		    border-color: $darkGray transparent transparent transparent;
		}
	}
	&.multiple{
		.ember-power-select-trigger{
			line-height: 0;
    		padding: 1px 36px 3px 4px !important;
			.ember-power-select-multiple-option{
				border-radius: $borderRadius;
				border: $borderStyle;
				background: $light;
				margin: 4px 0 0;
				padding: 0 3px 0 5px;
				.ember-power-select-multiple-remove-btn:hover,
				.ember-power-select-multiple-remove-btn:not(:hover){
					opacity: 1;
					color: $medGray;
					border-radius: $borderRadius;
					background: $gray;
				    float: right;
				    height: 15px;
				    width: 15px;
				    line-height: 15px;
				    text-align: center;
				    margin: 3px 0 0 3px;
				}
				.ember-power-select-multiple-remove-btn:hover{
					background: $orange;
					color: $white;
				}

			}
		}
	}
	&.ember-basic-dropdown--opened{
		.ember-power-select-trigger {
		    border-color: $activeColor;
		    outline: 0;
		    -webkit-box-shadow: none;
		    box-shadow: none;
			border-radius: $borderRadiusTop;
			background-image: none !important;

		}
		input[type="search"] {
		    display: block;
		    margin: 4px 0 0;
			padding: 0 1px;
		}
	}
}
#ember-basic-dropdown-wormhole{
	.ember-power-select-dropdown{
		border-color: $activeColor;
	    border-radius: $borderRadius;
		&.below{
			border-radius: $borderRadiusBottom;
		}
		&.above{
			border-radius: $borderRadiusBottom;
		}
	}
	.ember-power-select-search input{
		border: $borderStyle;
	}
	.ember-power-select-option{
		&.selected{
			background-color: $light;
		}
		&.highlighted{
			background-color: $hoverColor;
		}
	}
	.ember-power-select-option--selected{
		background: $light;
	}
	.ember-power-select-option--highlighted{
		background: $hoverColor;
	}
	.ember-basic-dropdown--below{
		border-radius: 0 0 2px 2px;
	}

	.ember-basic-dropdown--above{
		border-radius: 2px 2px 0 0;
	}

    .ticket-priority-select,
    .ticket-status-select{
		li{
			font-size: 1.2rem;
		}
	}
}


.input-group-addon:first-child{
	border-radius: $borderRadiusLeft;
}
.input-group-addon:last-child{
	border-radius: $borderRadiusRight;
}
.btn{
	border-radius: $borderRadius;
}
.btn-default,
.input-group-addon{
	border-color: $gray;
}
//remove browser default
.btn:focus,
.btn:active {
   outline: none !important;
}

.input-group .btn {
    height: 34px !important; //Remove after bootstrap fix released
 }

.btn-default:hover,
.input-group-addon,
.form-control[disabled],
.form-control[readonly],
fieldset[disabled] .form-control,
.btn-default:active,
.btn-default.active,
.open > .btn-default.dropdown-toggle,
.btn-default:active:hover,
.btn-default:active:focus,
.btn-default:active.focus,
.btn-default.active:hover,
.btn-default.active:focus,
.btn-default.active.focus,
.open > .btn-default.dropdown-toggle:hover,
.open > .btn-default.dropdown-toggle:focus,
.open > .btn-default.dropdown-toggle.focus{
	background-color: $light;
	border-color: $gray;
	z-index: 3;
}
.btn-default:active,
.btn-default.active,
.open > .btn-default.dropdown-toggle,
.btn-default:active:hover,
.btn-default:active:focus,
.btn-default:active.focus,
.btn-default.active:hover,
.btn-default.active:focus,
.btn-default.active.focus,
.open > .btn-default.dropdown-toggle:hover,
.open > .btn-default.dropdown-toggle:focus,
.open > .btn-default.dropdown-toggle.focus{
	border-color: $activeColor;
	z-index: 3;
}
.badge{
	background-color: $orange;
	font-size: 1.1rem;
	border-radius: $borderRadius;
}
.list-group{
	.list-group-item{
		border-width: 0 0 1px;
		margin-bottom: 0;
		border-radius: 0 !important;
		border-color: $gray;
		background: $light;
		&:hover{
			background-color: $white !important;
		}
	}


	.list-group-item.active,
	.list-group-item.active:hover,
	.list-group-item.active:focus{
		background-color: $white;
		color: $activeColor;
		border-color: $gray;
		font-weight: bold;
	}
	.list-group-item.active > .badge,
	.nav-pills > .active > a > .badge{
		background-color: $orange;
		color: $white;
	}
}

